--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
       "react-scripts": "5.0.1",
       "web-vitals": "^2.1.4"
     },
+    "devDependencies": {
+      "@testing-library/jest-dom": "^5.16.5",
+      "@testing-library/react": "^14.0.0",
+      "@testing-library/user-event": "^14.4.3",
+      "eslint-plugin-jest-dom": "^5.0.2",
+      "eslint-plugin-testing-library": "^6.0.0",
+      "jest": "^29.6.2",
+      "jest-environment-jsdom": "^29.6.2",
+      "ts-jest": "^29.1.1"
+    },
     "scripts": {
       "start": "react-scripts start",
       "build": "react-scripts build",
-      "test": "react-scripts test",
+      "test": "jest",
       "eject": "react-scripts eject"
     },
     "eslintConfig": {
