--- a/.github/workflows/main_sriacademics.yml
+++ b/.github/workflows/main_sriacademics.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: '20.x'
 
@@ -28,13 +28,16 @@ jobs:
           npm run build --if-present
           npm test --if-present
 
+      - name: Verify `.cursor-tutor/public/` before upload
+        run: ls -R .cursor-tutor/public/ || echo "⚠️ Warning: .cursor-tutor/public/ is missing or empty!"
+
       - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: |
-            public/  # Upload only the public directory where index.html and app.js are
-            !node_modules  # Exclude unnecessary files
+          path: .cursor-tutor/public/  # ✅ Updated path
+          if-no-files-found: error  # Fail if no files are found
+          retention-days: 5
 
   deploy:
     runs-on: ubuntu-latest
@@ -48,13 +51,16 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-          path: public/  # Ensure artifacts are downloaded to the correct location
+          path: .cursor-tutor/public/  # ✅ Updated path
+
+      - name: Verify `.cursor-tutor/public/` after download
+        run: ls -R .cursor-tutor/public/ || echo "⚠️ Warning: .cursor-tutor/public/ is missing or empty after download!"
 
       - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v4
         id: deploy-to-webapp
         with:
           app-name: 'sriacademics'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A4F0F513DAF1484896296748B3E37021 }}
-          package: public/
+          package: .cursor-tutor/public/  # ✅ Updated deployment path
