--- a/.github/workflows/main_sriacademics.yml
+++ b/.github/workflows/main_sriacademics.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .cursor-tutor/public/
+          path: public/
 
   deploy:
     runs-on: ubuntu-latest
@@ -46,7 +46,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-          path: .cursor-tutor/public/  # Ensure artifacts are downloaded to the correct location
+          path: public/  # Ensure artifacts are downloaded to the correct location
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
@@ -55,4 +55,4 @@ jobs:
           app-name: 'sriacademics'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A4F0F513DAF1484896296748B3E37021 }}
-          package: .cursor-tutor/public/
+          package: public/
