--- a/package.json
+++ b/package.json
@@ -2,31 +2,28 @@
     "name": "my-app",
     "version": "0.1.0",
     "private": true,
-    "main": "public/app.js",
+    "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "test": "jest --passWithNoTests"
+    },
     "dependencies": {
-      "express": "^4.21.2",
-      "@testing-library/jest-dom": "^5.16.5",
-      "@testing-library/react": "^13.4.0",
-      "@testing-library/user-event": "^13.5.0",
+      "next": "^14.1.0",
       "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-scripts": "5.0.1",
-      "web-vitals": "^2.1.4"
+      "react-dom": "^18.2.0"
     },
     "devDependencies": {
-      "@testing-library/jest-dom": "^5.16.5",
-      "@testing-library/react": "^14.0.0",
-      "@testing-library/user-event": "^14.4.3",
-      "eslint-plugin-jest-dom": "^5.0.2",
-      "eslint-plugin-testing-library": "^6.0.0",
-      "jest": "^29.6.2",
-      "jest-environment-jsdom": "^29.6.2",
-      "ts-jest": "^29.1.1"
-    },
-    "scripts": {
-      "start": "node public/app.js",
-      "build": "echo 'No build step needed for plain JS'",
-      "test": "jest --passWithNoTests"
+      "@testing-library/jest-dom": "^6.4.2",
+      "@testing-library/react": "^14.2.1",
+      "@testing-library/user-event": "^14.5.2",
+      "eslint": "^8.57.0",
+      "eslint-config-next": "^14.1.0",
+      "eslint-plugin-jest-dom": "^6.4.2",
+      "eslint-plugin-testing-library": "^6.2.0",
+      "jest": "^29.7.0",
+      "jest-environment-jsdom": "^29.7.0",
+      "ts-jest": "^29.1.2"
     },
     "eslintConfig": {
       "extends": [
