--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
       "dev": "next dev",
       "build": "next build",
       "start": "next start",
-      "test": "jest --passWithNoTests"
+      "lint": "next lint"
     },
     "dependencies": {
-      "next": "^14.1.0",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0"
+      "next": "14.2.29",
+      "react": "^18",
+      "react-dom": "^18"
     },
     "devDependencies": {
       "@babel/core": "^7.24.0",
@@ -20,8 +20,8 @@
       "@testing-library/jest-dom": "^5.17.0",
       "@testing-library/react": "^14.2.1",
       "@testing-library/user-event": "^14.5.2",
-      "eslint": "^8.57.0",
-      "eslint-config-next": "^14.1.0",
+      "eslint": "^8",
+      "eslint-config-next": "14.2.29",
       "eslint-plugin-jest-dom": "^5.1.0",
       "eslint-plugin-testing-library": "^6.2.0",
       "jest": "^29.7.0",
