--- a/package.json
+++ b/package.json
@@ -3,48 +3,48 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
-      "next": "14.2.29",
-      "react": "^18",
-      "react-dom": "^18"
+        "firebase": "^11.8.1",
+        "next": "14.2.29",
+        "react": "^18",
+        "react-dom": "^18"
     },
     "devDependencies": {
-      "@babel/core": "^7.24.0",
-      "@babel/preset-env": "^7.24.0",
-      "@babel/preset-react": "^7.23.3",
-      "@testing-library/jest-dom": "^5.17.0",
-      "@testing-library/react": "^14.2.1",
-      "@testing-library/user-event": "^14.5.2",
-      "eslint": "^8",
-      "eslint-config-next": "14.2.29",
-      "eslint-plugin-jest-dom": "^5.1.0",
-      "eslint-plugin-testing-library": "^6.2.0",
-      "jest": "^29.7.0",
-      "jest-environment-jsdom": "^29.7.0",
-      "ts-jest": "^29.1.2"
+        "@babel/core": "^7.24.0",
+        "@babel/preset-env": "^7.24.0",
+        "@babel/preset-react": "^7.23.3",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^14.2.1",
+        "@testing-library/user-event": "^14.5.2",
+        "eslint": "^8",
+        "eslint-config-next": "14.2.29",
+        "eslint-plugin-jest-dom": "^5.1.0",
+        "eslint-plugin-testing-library": "^6.2.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "ts-jest": "^29.1.2"
     },
     "eslintConfig": {
-      "extends": [
-        "react-app",
-        "react-app/jest"
-      ]
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
     },
     "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
-  }
-  
+}
